--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
   max-width: 90%;
   display: flex;
   align-content: center;
-  justify-content: space-between;
+  justify-content: center;
 
 }
 .contact-col{
